@@ -118,7 +118,7 @@
     					{% endfor %}
 					  </select>
   				</td>
-          <td class="d5"> <!-- Repeat -->
+          <td class="d5"> <!-- StatusLightFlash -->
             <label>
               <input type="checkbox" value="1" name="StatusLightFlash" id="TF6" onchange="TFChanged('TF6')"><br>
               <span>xxx</span>
