@@ -23,6 +23,7 @@ def teardown_request(exception):
 @login_required
 def _getvalues(tableid):
     if request.method == "GET":
+        localaccess.SetStatusBusy()
         val = None
         key=request.args.get('Id')
         ivalue=request.args.get('Value')
@@ -45,6 +46,7 @@ def _getvalues(tableid):
 @login_required
 def _gettimers():
     if request.method == "GET":
+        localaccess.SetStatusBusy()
         tm = localaccess.GetAscTime()
         st = localaccess.GetStatus(status)
         sr = localformat.Mod2Asc(localaccess.GetSunRiseSetMod())
@@ -56,6 +58,7 @@ def _gettimers():
 @login_required
 def _getholidays():
     if request.method == "GET":
+        localaccess.SetStatusBusy()
         tm = localaccess.GetAscTime()
         st = localaccess.GetStatus(0)
         td = get_db().GetTodayString()
@@ -68,7 +71,7 @@ def _getholidays():
 def timers_edit(tableid, id):
     cols, data = get_db().GetTimers()
     fmt = localformat.timenosec()
-    return render_template('status.html', editing=1, tableid=tableid, cols=cols, data=data, editingdata=None, digital=None, editingid=id, format=fmt)
+    return render_template('status.html', editing=1, tableid=tableid, cols=cols, data=data, editingdata=None, digital=None, dtype=None, editingid=id, format=fmt)
 
 @web_status.route('/timers_edited/<int:id>', methods=['POST'])
 @login_required
@@ -91,14 +94,14 @@ def holidays_edit(id):
     cols, data = get_db().GetHolidays()
     fmt = localformat.date()
     edata = get_db().BuildOptionsDicts("holidays")
-    return render_template('status.html', editing=1, tableid="holidays", cols=cols, data=data, editingdata=edata, digital=None, editingid=id, format=fmt)
+    return render_template('status.html', editing=1, tableid="holidays", cols=cols, data=data, editingdata=edata, digital=None, dtype=None, editingid=id, format=fmt)
 
 @web_status.route('/status/holidays_delete/<int:id>')
 @login_required
 def holidays_deleteitem(id):
     cols, data = get_db().GetHolidays()
     fmt = localformat.date()
-    return render_template('status.html', editing=2, tableid="holidays", cols=cols, data=data, editingdata=None, digital=None, editingid=id, format=fmt)
+    return render_template('status.html', editing=2, tableid="holidays", cols=cols, data=data, editingdata=None, digital=None, dtype=None, editingid=id, format=fmt)
 
 
 @web_status.route('/holidays_deleted/<int:id>', methods=['POST'])
@@ -145,13 +148,15 @@ def status(tableid):
     if (tableid == "timers"):
         cols, data = get_db().GetTimers()
         digital = None
+        dtype = None
     elif (tableid == "holidays"):
         get_db().DeleteOldHolidays()
         cols, data = get_db().GetHolidays()
         digital = None
+        type = None
     else:
-        cols, data, digital = get_db().GetDevices(tableid)
-    return render_template('status.html', editing=0, tableid=tableid, cols=cols, data=data, editingdata=None, digital=digital, editingid=0, format=fmt)
+        cols, data, digital, dtype = get_db().GetDevices(tableid)
+    return render_template('status.html', editing=0, tableid=tableid, cols=cols, data=data, editingdata=None, digital=digital, dtype=dtype, editingid=0, format=fmt)
 
 @web_status.route('/status')
 @login_required
